@@ -23,6 +23,7 @@ ChangeLog about GNU GLOBAL
 	* gtags.c: --convert/--createdb/--readdb/--scandb option added.
 	* btreeop: replaced with gtags and removed.
 	* split.c: use SPLIT structure which manage substring.
+	* gtagsop.c: now format version is 3 (pathindex format).
 
 July 4 2002, Shigio Yamaguchi  <shigio@gnu.org>
 
